# cakeml-backend

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  _RocqProject  dune-project  rocq-cakeml-extraction.opam
.github/: rocq-cakeml-extraction.opam.locked
.github/workflows/: build.yml  nix-action-9.0.yml  nix-action-9.1.yml
.nix/: config.nix
.nix/coq-overlays/CakeMLExtraction/: default.nix
theories/: Compile.v  Pipeline.v  Serialize.v  Tests.v  dune
theories/Backend/: Compile.v  Pipeline.v  Serialize.v
theories/CakeML/: Deserialize.v  FullAst.v  Serialize.v  ast.v  bigstep.v  functions.v  namespace.v  semanticPrimitives.v  smallstep.v  smallstep_rel.v
theories/CakeML/proofs/: equivalence_proofs.v  helper_lemmas.v  invariants.v
