opam-version: "2.0"
name: "rocq-cakeml-extraction"
version: "dev"
synopsis: "CakeML backend for Peregrine"
description: """
CakeML backend for Peregrine
"""
maintainer: "The Peregrine team"
authors: "The Peregrine team"
license: "MIT"
homepage: "https://peregrine-project.github.io/"
dev-repo: "git+https://github.com/peregrine-project/cakeml-backend.git"
bug-reports: "https://github.com/peregrine-project/cakeml-backend/issues"

depends: [
  "rocq-core" {>= "9.1" & < "9.2~"}
  "rocq-stdlib" {>= "9.0" & < "9.2~"}
  "rocq-metarocq-utils" {>= "1.4" & < "1.4.2"}
  "rocq-metarocq-common" {>= "1.4" & < "1.4.2"}
  "rocq-metarocq-template" {>= "1.4" & < "1.4.2"}
  "rocq-metarocq-template-pcuic" {>= "1.4" & < "1.4.2"}
  "rocq-metarocq-pcuic" {>= "1.4" & < "1.4.2"}
  "rocq-metarocq-safechecker" {>= "1.4" & < "1.4.2"}
  "rocq-metarocq-erasure" {>= "1.4" & < "1.4.2"}
  "rocq-metarocq-erasure-plugin" {>= "1.5.1" & < "1.5.2"}
  "rocq-ceres-bytestring" {= "1.0.0"}
]

build: [ make "build" ]
install: [ make "install" ]

tags: [
  "keyword:extraction"
  "logpath:CakeML"
]
